2010-03-22  Ethan A Merritt  <merritt@u.washington.edu

	* src/misc.c (lp_parse): Re-write the lp_parse() routine to prevent the
	loading of a user-defined linetype from undoing other linestyle 
	properties given earlier in the same command.

	* src/util3d.h src/util3d.c (draw3d_line_unconditional)
	src/hidden3d (draw_edge draw_line_hidden):  The code was passing in
	top and bottom colors for the hidden3d routines as integer linetypes.
	But loading a whole linetype lost any line properties given explicitly
	in the splot command. Change this so that the top and bottom colors are
	passed as t_colorspec structures instead.

2010-03-21  Tommaso Vinci  <ilbibi@users.sourceforge.net>

	* Provide Humlicek's approximation to the Voigt/Faddeeva function
	  voigt(x,y) = \frac{y}{\pi} \int{\frac{e^{t^2}}{(x-t)^2+y^2}}dt

2010-03-20  Ethan A Merritt  <merritt@u.washington.edu

	* NEWS src/hidden3d.c src/plot3d.c src/graph3d.c docs/gnuplot.doc:

	Add support for 'with impulses' in hidden3d code.  Previously the manual
	said 3D impulses were drawn "from the xy plane" but the code did not
	follow this, drawing instead from zmin.  Now the 3D code always draws
	impulses from z=0 just as the 2D code always draws from y=0.

2010-03-18  Ethan A Merritt  <merritt@u.washington.edu

	* docs/gnuplot.doc:  Add index entries and update description of mouse
	scrolling and hotkeys.

2010-03-17  Ethan A Merritt  <merritt@u.washington.edu

	* plot.c (main): Initialize c_token to a legal value at the start of
	interactive input.

	* docs/gnuplot.doc src/set.c src/term_api.h src/wxterminal/wxt_gui.cpp
	src/wxterminal/wxt_term.h term/cairo.trm term/emf.trm term/gd.trm
	term/pdf.trm term/post.h term/post.trm term/wxt.trm:

	New terminal option "fontscale <scale>".  This scale factor is applied
	to the nominal font size before use, so that you can scale the font 
	size up or down in parallel with scaling the output page up or down.
	This is mostly relevant for hardcopy output or embedded figures.
