@@ -1,3 +1,8 @@
+2010-03-23  Guy Mann  <guydmann@gmail.com>
+
+	* term/js/gnuplot_mouse.js (mouse_update):
+	Repaint current plot before each incremental update of the zoom box.
+
 2010-03-22  Ethan A Merritt  <merritt@u.washington.edu
 
 	* src/misc.c (lp_parse): Re-write the lp_parse() routine to prevent the
